--- a/index.html
+++ b/index.html
@@ -234,5 +234,5 @@
       </section>
     </template>
     <script src="js/functions.js"></script>
-</body>
+    <script src="js/main.js"></script></body>
 </html>
