--- a/10/index.html
+++ b/10/index.html
@@ -234,7 +234,16 @@
         <h2 class="data-error__title">Не удалось загрузить данные</h2>
       </section>
     </template>
-    <script src="js/functions.js"></script>
-     <script src="js/main.js" type="module"></script>
+  
+       <!-- Шаблон комментария -->
+  <template id="comment">
+    ` <li class="social__comment">
+      <img class="social__picture" src="" alt="" width="35" height="35">
+      <p class="social__text"></p>
+    </li>
+  </template>
+  
+    <!-- <script src="js/functions.js"></script> -->
+    <script src="js/main.js" type="module"></script>
 </body>
 </html>
