--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section class="img-upload">
         <div class="img-upload__wrapper">
           <h2 class="img-upload__title  visually-hidden">Загрузка фотографии</h2>
-          <form class="img-upload__form" id="upload-select-image" autocomplete="off">
+          <form class="img-upload__form" id="upload-select-image" method="post" enctype="multipart/form-data" action="https://30.javascript.pages.academy/kekstagram" autocomplete="off">
 
             <!-- Изначальное состояние поля для загрузки изображения -->
             <fieldset class="img-upload__start">
@@ -119,7 +119,10 @@
                     <input class="text__hashtags" name="hashtags" placeholder="#ХэшТег">
                   </div>
                   <div class="img-upload__field-wrapper">
-                    <textarea class="text__description" name="description" placeholder="Ваш комментарий..."></textarea>
+                    <textarea class="text__description" name="description" placeholder="Ваш комментарий..."
+                    data-pristine-maxlength="140"
+                    data-pristine-maxlength-message="Ваш комментарий не должен быть больше 140 символов"
+                    ></textarea>
                   </div>
                 </fieldset>
 
@@ -146,7 +149,7 @@
         </div>
 
         <!-- Информация об изображении. Подпись, комментарии, количество лайков -->
-        <div class="big-picture__social  social">
+        <div class="big-picture__social  social" data-id>
           <div class="social__header">
             <img class="social__picture" src="img/avatar-1.svg" alt="Аватар автора фотографии" width="35" height="35">
             <p class="social__caption">Тестим новую камеру! =)</p>
@@ -233,16 +236,18 @@
         <h2 class="data-error__title">Не удалось загрузить данные</h2>
       </section>
     </template>
-  
-       <!-- Шаблон комментария -->
-  <template id="comment">
-    ` <li class="social__comment">
-      <img class="social__picture" src="" alt="" width="35" height="35">
-      <p class="social__text"></p>
-    </li>
-  </template>
-  
+
+     <!-- Шаблон комментария -->
+    <template id="comment">
+      ` <li class="social__comment">
+        <img class="social__picture" src="" alt="" width="35" height="35">
+        <p class="social__text"></p>
+      </li>
+    </template>
+
+
     <!-- <script src="js/functions.js"></script> -->
+    <script src="vendor/pristine/pristine.min.js" type="module"></script>
     <script src="js/main.js" type="module"></script>
 </body>
 </html>
