--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="vendor/nouislider/nouislider.css">
   <title>Кекстаграм</title>
 </head>
 
@@ -247,7 +248,8 @@
 
 
     <!-- <script src="js/functions.js"></script> -->
-    <script src="vendor/pristine/pristine.min.js" type="module"></script>
+    <script src="vendor/nouislider/nouislider.js"></script>
+    <script src="vendor/pristine/pristine.min.js"></script>
     <script src="js/main.js" type="module"></script>
 </body>
 </html>
