chrckup files lint

--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@
                 <!-- Добавление хэш-тегов и комментария к изображению -->
                 <fieldset class="img-upload__text text">
                   <div class="img-upload__field-wrapper">
-                    <input class="text__hashtags" name="hashtags" placeholder="#ХэшТег">
+                    <input class="text__hashtags" id="text__hashtags" name="hashtags" placeholder="#ХэшТег">
                   </div>
                   <div class="img-upload__field-wrapper">
                     <textarea class="text__description" name="description" placeholder="Ваш комментарий..."
-                    data-pristine-maxlength="140"
-                    data-pristine-maxlength-message="Ваш комментарий не должен быть больше 140 символов"
+                    data-pristine-maxlength="14"
+                    data-pristine-maxlength-message="Ваш комментарий не должен быть больше 14 символов"
                     ></textarea>
                   </div>
                 </fieldset>
